--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="Favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="Favicons/favicon-16x16.png">
     <link rel="manifest" href="Favicons/site.webmanifest">
-    <title>fffjfut</title>
+    <title>Guardians of the Galaxy</title>
   </head>
   <body>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
