--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Favicons for the page -->
-    <link rel="apple-touch-icon" sizes="180x190" href="Favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Favicons/favicon-16x16.png">
-    <link rel="manifest" href="Favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x190" href="./Favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./Favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./Favicons/favicon-16x16.png">
+    <link rel="manifest" href="./Favicons/site.webmanifest">
     <title>Guardians of the Galaxy</title>
   </head>
   <body>
